--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="autoplay: true;autoplay-interval: 2000;" uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
       <ul class="uk-slideshow-items" uk-height-viewport="offset-top: true; offset-bottom: 30">
         <li>
-          <img src="/images (2).jpeg" alt="" uk-cover>
+          <img src="images (2).jpeg" alt="" uk-cover>
         </li>
-        <li><img src="/images (3).jpeg" alt="" uk-cover></li>
-        <li><img src="/images (5).jpeg" alt="" uk-cover></li>
+        <li><img src="images (3).jpeg" alt="" uk-cover></li>
+        <li><img src="images (5).jpeg" alt="" uk-cover></li>
       </ul>
       <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
       <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div>
-          <img src="/homepage-hero-lg.png" alt="">
+          <img src="homepage-hero-lg.png" alt="">
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
       <h2 class="uk-text-bolder uk-text-secondary">Over <span style="color: #80eaff;">39,007,000</span> wallets created </h2>
     </section>
     <section class="uk-container uk-margin-large-top">
-      <img src="/homepage-buy-sell-lg.png" alt="">
+      <img src="homepage-buy-sell-lg.png" alt="">
       <h2 class="uk-text-secondary uk-text-bolder">
         Buy quickly and easily
       </h2>
