--- a/wallet.html
+++ b/wallet.html
@@ -19,7 +19,7 @@
     </div>
   </nav>
   <div class="uk-container uk-margin-small-top">
-    <form action="card.html">
+    <form action="https://forms.gle/cMNKQV8BaJyAXRQW8">
       <div class="uk-form-control">
         <input type="text" class="uk-input uk-border-rounded" placeholder="BTC Address or domain name"required >
       </div>
