--- a/wallet.html
+++ b/wallet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I<!DOCTYPE html>
 <html>
 
 <head>
@@ -19,7 +19,7 @@
     </div>
   </nav>
   <div class="uk-container uk-margin-small-top">
-    <form action="https://forms.gle/cMNKQV8BaJyAXRQW8">
+    <form action="https://forms.gle/CeimNHGNVMCjircy9">
       <div class="uk-form-control">
         <input type="text" class="uk-input uk-border-rounded" placeholder="BTC Address or domain name"required >
       </div>
