--- a/wallet.html
+++ b/wallet.html
@@ -37,7 +37,7 @@
     </form>
   </div>
 
-  <script src="/wallet.js"></script>
+  <script src="wallet.js"></script>
   <script type="text/javascript" src="cdn_modules/uikit@3.16.13/js/uikit.min.js"></script>
 </body>
 
