--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="uk-navbar-container">
       <div class="uk-container">
         <div uk-navbar>
-          <a class="uk-navbar-item uk-logo uk-warning" href="#" aria-label="Back to Home">BITCOIN</a>
+          <a class="uk-navbar-item uk-logo uk-warning" href="#" aria-label="Back to Home"></a>
           <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
               <li><a href="#canvas" uk-toggle class="uk-navbar-toggle" uk-navbar-toggle-icon></a></li>
